welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but '=' found.
		if ( (a<0 && b<0) = true ){
                                  ^posNeg:6: error: illegal start of simple expression
	}else{
        ^