welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
	if (negative){
		if ( (a<0 && b<0) = true ){
			return true;
		}
	}else{
		if (a<0 || b>0 ){
			return true;
		}
		if ( a>0 || b<0){
			return true;
		}else{
			return false;
		}
	}
}
